# Automata-Playground

./: README.md  automatoData.JSON
Haskell/Automato-Plauground/: Automato-Plauground.cabal  CHANGELOG.md  LICENSE  README.md  automato.json  palavras.txt
Haskell/Automato-Plauground/app/: Automato.hs  Main.hs
Prolog/: README  README.md  main.pl
Prolog/Automata-Playground/: main.pl
Prolog/automato/: automato.pl
Prolog/pastaResultados/: testesBase
